--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -7,6 +7,17 @@
      <link rel="stylesheet"  href="../style.css">
 </head>
 <body>
-    Hello! My name is Matthew Bradley, I am excited to host this year's 510 in my hometown.
+    <img src="../self.png" alt="me" class="portrait">
+    <p>
+        Hello! My name is Matthew Bradley, I am excited to host this year's 510 in my hometown.
+        I am a scientist, entrapaneur, provacateur, web designer, and 510 participant. I grew up
+        catting, roping cattle, and chugging arizona iced tea. I'm an aspiring commune-ist 
+        (not at all communist), and hope to lead several powerful coalitions in that department.
+        In my free time, I try to be as punk as possible.
+        
+        
+        I hope that we make this year's 510 better than ever before, and that everyone steps up
+        in their respective roles. Cheers.
+    </p>
 </body>
 </html>
