--- a/index.html
+++ b/index.html
@@ -26,12 +26,44 @@
             <div id="furtherInfo">
                 <div class="furtherInfoSection">
                     <h2>Lodging and food</h2>
+                    <div class="infoSectionInfo">
+                        <p class="infeSectionText">There will be 3 to 4 sleeping options every night of the 510 crew's stay.
+                            <br>
+                            These include my house, Jordan's house, outdoors, and an AirBNB one night.
+                            <br>
+                            NO more than 2 510 members may sleep in the same room in a given night,
+                            as this is prone to lead to senseless behaviors such as spiked wines.
+                            <br>
+                            It is encouraged to branch out and sleep anywhere else you desire, such as
+                            treehouses, outdoor showers, trampolines, or anywhere else you can think of.
+                            <br>
+                            Food may or may not be provided. This will be up to the whims of us and our
+                            parents. Please do not ask for food ever, unless requesting a Taco Don's trip.
+                        </p>
+                        <img src="prescottHouse.png" class="furtherInfoPic">
+                    </div>
                 </div>
                 <div class="furtherInfoSection">
                     <h2>Arriving to Prescott</h2>
+                     <div class="infoSectionInfo">
+                        <p class="infeSectionText">
+                            There will be a shuttle from Phoenix to Prescott.
+                            It will either be run by Groome, or it will be Jordan and I in a white van.
+                            Either way, please refrain from drinking, smoking, hell-raising,
+                            and any other such wild and wooly behaviors until safely to Prescott.
+                            Any rule breakers will not be fed.
+                        </p>
+                        <img src="van.png" class="furtherInfoPic">
+                     </div>
                 </div>
                 <div class="furtherInfoSection">
                     <h2>Payment plan</h2>
+                    <div class="infoSectionInfo">
+
+                    </div>
+                </div>   
+                 <div class="furtherInfoSection">
+                    <h2>Nova</h2>
                 </div>   
             </div>
         </div>
