--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <div class="logo">510204080160</div>
-        <a href="">Meet the members</a>
-        <a href="">Exclusive interview</a>
-        <a href="./pages/aboutMe.html">About the developer</div>
+        <img src="510Logo.png" alt="510" id="logo"/>
+        <a href="" class="headerText">Meet the members</a>
+        <a href="" class="headerText">Exclusive interview</a>
+        <a href="./pages/aboutMe.html" class="headerText">About the developer</div>
     </header>
     <main>
         <div id="dayCount">
-            <h1>2025 Challenge in <u>76</u> Days</h1>
+            <h1>2025 Challenge in <u>73</u> Days</h1>
         </div>
         <div id="info">
             <button>
@@ -27,7 +27,7 @@
                 <div class="furtherInfoSection">
                     <h2>Lodging and food</h2>
                     <div class="infoSectionInfo">
-                        <p class="infeSectionText">There will be 3 to 4 sleeping options every night of the 510 crew's stay.
+                        <p class="infoSectionText">There will be 3 to 4 sleeping options every night of the 510 crew's stay.
                             <br>
                             These include my house, Jordan's house, outdoors, and an AirBNB one night.
                             <br>
@@ -36,7 +36,7 @@
                             <br>
                             It is encouraged to branch out and sleep anywhere else you desire, such as
                             treehouses, outdoor showers, trampolines, or anywhere else you can think of.
-                            <br>
+                            <br><br>
                             Food may or may not be provided. This will be up to the whims of us and our
                             parents. Please do not ask for food ever, unless requesting a Taco Don's trip.
                         </p>
@@ -46,7 +46,7 @@
                 <div class="furtherInfoSection">
                     <h2>Arriving to Prescott</h2>
                      <div class="infoSectionInfo">
-                        <p class="infeSectionText">
+                        <p class="infoSectionText">
                             There will be a shuttle from Phoenix to Prescott.
                             It will either be run by Groome, or it will be Jordan and I in a white van.
                             Either way, please refrain from drinking, smoking, hell-raising,
@@ -59,11 +59,24 @@
                 <div class="furtherInfoSection">
                     <h2>Payment plan</h2>
                     <div class="infoSectionInfo">
-
+                        <p class="infoSectionText">
+                            I will be accepting 510 deposits (10,000 USD) any time between now and February 1.
+                            <br>
+                            Reach out for my venmo
+                        </p>
                     </div>
                 </div>   
                  <div class="furtherInfoSection">
                     <h2>Nova</h2>
+                    <div class="infoSectionInfo">
+                        <p class="infoSectionText">
+                            As I am sure everyone is excited for, Nova will indeed be present
+                            during the week of your stay. Please treat her with the utmost respect,
+                            dignity, kindness, reverence, obedience, and healthy fear of dissapointing
+                            her if you do not participate in walks, treat giving, playing etc...
+                        </p>
+                    </div>
+                    
                 </div>   
             </div>
         </div>
