--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <img src="510Logo.png" alt="510" id="logo"/>
         <a href="" class="headerText">Meet the members</a>
-        <a href="" class="headerText">Exclusive interview</a>
-        <a href="./pages/aboutMe.html" class="headerText">About the developer</div>
+        <a href="./pages/exclusiveInterview.html" class="headerText">Exclusive interview</a>
+        <a href="./pages/aboutMe.html" class="headerText">About the developer</a>
     </header>
     <main>
         <div id="dayCount">
