--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="510Logo.png" alt="510" id="logo"/>
+        <img src="510Logo.png" alt="510" class="logo"/>
         <a href="" class="headerText">Meet the members</a>
         <a href="./pages/exclusiveInterview.html" class="headerText">Exclusive interview</a>
         <a href="./pages/aboutMe.html" class="headerText">About the developer</a>
