--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -7,15 +7,28 @@
      <link rel="stylesheet"  href="../style.css">
 </head>
 <body>
+    <header>
+        <a href="../index.html" class="logo">
+            <img src="../510Logo.png" alt="510" class="logo"/>
+        </a>
+        <a href="" class="headerText">Meet the members</a>
+        <a href="./exclusiveInterview.html" class="headerText">Exclusive interview</a>
+        <a href="./aboutMe.html" class="headerText">About the developer</a>
+    </header>
     <img src="../self.png" alt="me" class="portrait">
-    <p>
+    <p id="selfInfo">
         Hello! My name is Matthew Bradley, I am excited to host this year's 510 in my hometown.
+
+        <br>
+        <br>
+
         I am a scientist, entrapaneur, provacateur, web designer, and 510 participant. I grew up
         catting, roping cattle, and chugging arizona iced tea. I'm an aspiring commune-ist 
-        (not at all communist), and hope to lead several powerful coalitions in that department.
+        (not communist), and hope to lead several powerful coalitions in that department.
         In my free time, I try to be as punk as possible.
         
-        
+        <br>
+        <br>
         I hope that we make this year's 510 better than ever before, and that everyone steps up
         in their respective roles. Cheers.
     </p>
