--- a/pages/exclusiveInterview.html
+++ b/pages/exclusiveInterview.html
@@ -8,24 +8,92 @@
 </head>
 <body>
      <header>
-        <img src="510Logo.png" alt="510" id="logo"/>
+         <a href="../index.html" class="logo">
+            <img src="../510Logo.png" alt="510" class="logo"/>
+        </a>
         <a href="" class="headerText">Meet the members</a>
-        <a href="./pages/exclusiveInterview.html" class="headerText">Exclusive interview</a>
-        <a href="./pages/aboutMe.html" class="headerText">About the developer</a>
+        <a href="./exclusiveInterview.html" class="headerText">Exclusive interview</a>
+        <a href="./aboutMe.html" class="headerText">About the developer</a>
     </header>
     <main class="interview">
         <p class="question">
             When did you decide you wanted to be part of 510?
         </p>
         <p class="answer">
-            When I realized it would be really hard to have 6 you-know-what in 24 hours.
+            When I realized it would be really hard to have 6 you-know-whats in 24 hours.
         </p>
         <p class="question">
-            What was going on in your life around that time?
+            What was going on in your life around the time you had this realization?
+        </p>
+        <p class="answer">
+            Not much. Mostly sitting either on Lauren and Andrew’s couch, or our own couch. 
+            Slapping ghost’s ass. We were really bumming it back then, leaks in the ceiling,
+             Matthew in the backyard trying to grow food, we didn’t have much, but that kind 
+             of situation forces you to have a lot of heart and grit.
         </p>
         <p class="question">
             Do you ever consider quitting? Or you’re committed for the yearly bit? I mean, this seems like a physically grueling process
         </p>
+        <p class="answer">
+            I would never quit
+        </p>
+        <p class="question">
+            What drives you to keep going then?
+        </p>
+        <p class="answer">
+            I want to push boundaries. I want to be remembered for something. One thing 
+            that always irks me is people that seem to accept limits just because they were 
+            told they existed. I think Tyler said it best – “I hate wasted potential, that 
+            shit breaks your spirit”
+        </p>
+        <p class="question">
+            What makes you a good competitor in 510 compared to everyone else? Do you bring anything special to the table?
+        </p>
+         <p class="answer">
+            People know my limitations, I do my best with the 80 but it’s not where I 
+            shine. But honestly, I think that’s a good thing when you zoom out. We’re like 
+            a eusocial being once this thing starts, you need a division of labor, 
+            specialization. Honestly, the 80 is glamorous, people see you chugging 24 beers 
+            or whatever, but every number is difficult in its own right and I think I bring
+             an enthusiasm and intelligence that powers us in a special way.
+         </p>
+         <p class="question">
+            It’s funny you mention intelligence. Do you think it holds you back doing 
+            this with a team that is only half PhDs?
+         </p>
+          <p class="answer">
+            That’s for coach to decide, I’m here to play.
+          </p>
+          <p class="question">
+            How does your family feel about you doing this every year?
+          </p>
+           <p class="answer">
+            I do it all for them, if they didn’t support me I would stop in a heartbeat.
+           </p>
+            <p class="question">
+                How do you feel about hosting in your hometown?
+            </p>
+             <p class="answer">
+                I spent years running competitively in Prescott, and I learned a lot of 
+                lessons. Work the hills, get in your opponent’s heads, pace yourself. The
+                 challenge is the same. When I smell the pine air of Prescott, lay my eyes 
+                 on Thumb Butte, I have no doubt that I’ll be able to bring an energy that’s new
+                compared to previous years.
+             </p>
+             <p class="question">
+                How do you feel going into this year? Do you expect to set a new record, even at this altitude?
+             </p>
+              <p class="question">
+                Finally, can you predict your teammate’s vibes for this year? What position do you anticipate 
+                they’ll each be playing?
+              </p>
+              <p class="answer">
+                Emily’s like a center midfielder. She can read the whole field, make adjustments, 
+                pass to the open players. She keeps the gears turning, and if we need it, she can also score 
+                the big goal. Andrew’s more like a tennis player, he knows it’s a long match and he’s going 
+                the whole time. Never too high or too low, always a beer in hand, and keeps the composure for
+                 the whole group in some ways. Lauren foosball, Matthew curling, Jordan what again?
+              </p>
     </main>
 </body>
 </html>
