--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 </head>
 <body>
     <header>
-        <img src="510Logo.png" alt="510" class="logo"/>
+        <img src="./images/510Logo.png" alt="510" class="logo"/>
         <a href="" class="headerText">Meet the members</a>
         <a href="./pages/exclusiveInterview.html" class="headerText">Exclusive interview</a>
+         <a href="./pages/fivetenQuiz.html" class="headerText">510 Quiz!</a>
         <a href="./pages/aboutMe.html" class="headerText">About the developer</a>
     </header>
     <main>
         <div id="dayCount">
-            <h1>2025 Challenge in <u>73</u> Days</h1>
+            <h1>2025 Challenge in <u>66</u> Days</h1>
         </div>
         <div id="info">
             <button>
                 <a href = "#furtherInfo">Click for info</a>
             </button>
-            <img src="./510Poster.png" alt="510_2025" class="responsive">
-            <img src="watermelons.png" alt="watermelong" class="floatingImg" id="watermelon1">
+            <img src="./images/510Poster.png" alt="510_2025" class="responsive">
+            <img src="./images/watermelons.png" alt="watermelong" class="floatingImg" id="watermelon1">
             <div id="furtherInfo">
                 <div class="furtherInfoSection">
                     <h2>Lodging and food</h2>
@@ -40,7 +41,7 @@
                             Food may or may not be provided. This will be up to the whims of us and our
                             parents. Please do not ask for food ever, unless requesting a Taco Don's trip.
                         </p>
-                        <img src="prescottHouse.png" class="furtherInfoPic">
+                        <img src="./images/prescottHouse.png" class="furtherInfoPic">
                     </div>
                 </div>
                 <div class="furtherInfoSection">
@@ -53,7 +54,7 @@
                             and any other such wild and wooly behaviors until safely to Prescott.
                             Any rule breakers will not be fed.
                         </p>
-                        <img src="van.png" class="furtherInfoPic">
+                        <img src="./images/van.png" class="furtherInfoPic">
                      </div>
                 </div>
                 <div class="furtherInfoSection">
