--- a/pages/exclusiveInterview.html
+++ b/pages/exclusiveInterview.html
@@ -9,7 +9,7 @@
 <body>
      <header>
          <a href="../index.html" class="logo">
-            <img src="../510Logo.png" alt="510" class="logo"/>
+            <img src="../images/510Logo.png" alt="510" class="logo"/>
         </a>
         <a href="" class="headerText">Meet the members</a>
         <a href="./exclusiveInterview.html" class="headerText">Exclusive interview</a>
