--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <a href="../index.html" class="logo">
-            <img src="../510Logo.png" alt="510" class="logo"/>
+            <img src="../images/510Logo.png" alt="510" class="logo"/>
         </a>
         <a href="" class="headerText">Meet the members</a>
         <a href="./exclusiveInterview.html" class="headerText">Exclusive interview</a>
         <a href="./aboutMe.html" class="headerText">About the developer</a>
     </header>
-    <img src="../self.png" alt="me" class="portrait">
+    <img src="../images/self.png" alt="me" class="portrait">
     <p id="selfInfo">
         Hello! My name is Matthew Bradley, I am excited to host this year's 510 in my hometown.
 
