--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet"  href="style.css">
+     <script src="./script.js" defer></script>
 </head>
 <body>
     <header>
         <img src="./images/510Logo.png" alt="510" class="logo"/>
-        <a href="" class="headerText">Meet the members</a>
+        <a href="./pages/meetMembers.html" class="headerText">Meet the members</a>
         <a href="./pages/exclusiveInterview.html" class="headerText">Exclusive interview</a>
          <a href="./pages/fivetenQuiz.html" class="headerText">510 Quiz!</a>
         <a href="./pages/aboutMe.html" class="headerText">About the developer</a>
     </header>
     <main>
         <div id="dayCount">
-            <h1>2025 Challenge in <u>66</u> Days</h1>
+            <h1>2025 Challenge in <u id="days"></u> Days</h1>
         </div>
         <div id="info">
             <button>
