--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -11,8 +11,9 @@
         <a href="../index.html" class="logo">
             <img src="../images/510Logo.png" alt="510" class="logo"/>
         </a>
-        <a href="" class="headerText">Meet the members</a>
-        <a href="./exclusiveInterview.html" class="headerText">Exclusive interview</a>
+        <a href="" class="headerText notAbout">Meet the members</a>
+        <a href="./exclusiveInterview.html" class="headerText notAbout">Exclusive interview</a>
+         <a href="../pages/fivetenQuiz.html" class="headerText notAbout">510 Quiz!</a>
         <a href="./aboutMe.html" class="headerText">About the developer</a>
     </header>
     <img src="../images/self.png" alt="me" class="portrait">
