--- a/pages/exclusiveInterview.html
+++ b/pages/exclusiveInterview.html
@@ -11,10 +11,12 @@
          <a href="../index.html" class="logo">
             <img src="../images/510Logo.png" alt="510" class="logo"/>
         </a>
-        <a href="" class="headerText">Meet the members</a>
-        <a href="./exclusiveInterview.html" class="headerText">Exclusive interview</a>
+        <a href="" class="headerText notAbout">Meet the members</a>
+        <a href="./exclusiveInterview.html" class="headerText notAbout">Exclusive interview</a>
+        <a href="../pages/fivetenQuiz.html" class="headerText notAbout">510 Quiz!</a>
         <a href="./aboutMe.html" class="headerText">About the developer</a>
     </header>
+    <h1>An Interview with Jordan (Roach Killer)</h1>
     <main class="interview">
         <p class="question">
             When did you decide you wanted to be part of 510?
